# tap-matomo

./: .editorconfig  .gitignore  README.md  example.config.json  example.meltano.yml  pyproject.toml  setup.cfg  setup.py
tap_matomo/: streams.py  tap.py
