[tool.poetry]
name = "tap-matomo"
version = "0.0.4"
description = "`tap-matomo` is a Singer tap for Matomo built with Singer SDK."
authors = ["Evangelos Pappas <epappas@evalonlabs.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.25.1"
singer-sdk = "^0.32.0"
pandas = "^2.0.3"
meltano = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-matomo = 'tap_matomo.tap:cli'

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^2.0.0"
ipdb = "^0.13.0"
pylint = "^2.15.8"

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.aws.dependencies]
mangum = "^0.17.0"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |Dockerfile
  |Jenkinfile
)/
'''